# agripandas

./: .gitignore  GEMINI.md  README.md  demo.ipynb  main.py  pipeline.py  production_pipeline.py  pyproject.toml  workflow.py
agripandas/: __init__.py  agent.py  loaders.py  registry.py  schema.py
agripandas/src/: agent.py  tools.py
data/: agri_data.xlsx  test.xlsx  test_dup.xlsx
src/agripandas/: __init__.py  agent.py  export.py  loaders.py  registry.py  schema.py  tools.py
